--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.cdnfonts.com/css/unione-force');
+@import url('https://fonts.cdnfonts.com/css/beyonders?styles=170912,170913');
+@import url('https://fonts.cdnfonts.com/css/zero-prime');
+@import url('https://fonts.cdnfonts.com/css/tt-firs-neue-trl');
+
+                
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background-color: #001126;
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 4rem;
+  color: white;
+  font-family: "Unione Force";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.TT{
+  font-family: 'TT Firs Neue Trl', sans-serif;
+}
+.zero{
+  font-family: "Zero Prime" ;
+}
+
+.beyonders{
+  font-family: "Beyonders";
+}
+.mask{
+  -webkit-text-stroke: #40C72A;
+  -webkit-text-stroke-width: 1px;
 }
